# ttune

./: CMakeLists.txt  DejaVuSans.inc  DejaVuSerif.inc  README.md  compile.sh  fft.c  fft.h  install.txt  main.c  makefile  oglinit.c  shapes.h  test_snd.txt  ttune.c  ttune.cpp  ttunevg.cpp  ttunevg.h  wav.c  wav.h
acarsdec-3.2/: acarsdec.c
bcm-stub/: bcm2835.c
csdr/: libcsdr_gpl.h  play_radio.sh
example/: example.txt
openvg/: eglstate.h  fontinfo.h  libshapes.c  shapes.h  shf.inc
openvg/shivavg/: glw.c  glw.cpp  glx.c  glx.cpp  input.h  shContext.c  shContext.h  shDefs.h  shExtensions.c  shGeometry.c  shImage.c  shPaint.c  shParams.c  shPath.c  shPipeline.c  shVgu.c  shgl.h
openvg/shivavg/VG/: openvg.h
